--- a/Lombiq.Hosting.Azure.ApplicationInsights.csproj
+++ b/Lombiq.Hosting.Azure.ApplicationInsights.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <DefaultItemExcludes>$(DefaultItemExcludes);.git*;node_modules\**;Tests\**</DefaultItemExcludes>
+
   </PropertyGroup>
 
   <PropertyGroup>
@@ -23,7 +24,7 @@
     <None Include="Readme.md" />
     <None Include="NuGetIcon.png" Pack="true" PackagePath="" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <None Remove="node_modules\**" />
     <None Remove="Tests\**" />
